...
              : "diamond-outline";
          return <Ionicons name={name} color={color} size={size + (focused ? 2 : 0)} />;
        },
      })}
    >
      <Tabs.Screen name="index" options={{ href: null }} />
      <Tabs.Screen name="battle" options={{ title: "Battle" }} />
      <Tabs.Screen name="leaderboard" options={{ title: "Ranks" }} />
      <Tabs.Screen name="profile" options={{ title: "Profile" }} />
      <Tabs.Screen name="shop" options={{ href: null }} />
    </Tabs>
  );
}
...
